--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx ./src",
-    "lint:fix": "eslint --fix --ext .js,.jsx ./src"
+    "lint:fix": "eslint --fix --ext .js,.jsx ./src",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": [
@@ -43,28 +44,39 @@
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
+    "algosdk": "^1.14.0",
     "apexcharts": "^3.35.0",
     "change-case": "^4.1.2",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.28.0",
+    "folks-finance-js-sdk": "github:Folks-Finance/folks-finance-js-sdk",
     "formik": "^2.2.9",
     "history": "^5.2.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "patch-package": "^6.4.7",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "4.0.3",
+    "react-shimmer": "^3.2.0",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
+    "@types/node": "17.0.2",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.4.0",
@@ -75,6 +87,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1"
+    "path-browserify": "^1.0.1",
+    "prettier": "^2.5.1",
+    "typescript": "4.6.3"
   }
 }
